# iq

task1/: CMakeLists.txt  Readme.md  chartview.cpp  chartview.h  main.cpp
task2/: .Readme  CMakeLists.txt  main.cpp
